--- a/Depo/Depo/Presentation/SubViews/FullOfQuotaPopUps/LargePopUp/LargeFullOfQuotaPopUp.xib
+++ b/Depo/Depo/Presentation/SubViews/FullOfQuotaPopUps/LargePopUp/LargeFullOfQuotaPopUp.xib
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LargeFullOfQuotaPopUp" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LargeFullOfQuotaPopUp" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="backgroundImageView" destination="0UO-3v-M7N" id="qG5-Cd-dqZ"/>
                 <outlet property="checkBoxLabel" destination="OiY-SP-uNa" id="PIZ-Yj-CSO"/>
@@ -45,7 +45,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UjI-IO-v9x">
                                     <rect key="frame" x="16" y="41.5" width="288" height="485"/>
                                     <subviews>
-                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gwP-lA-H0d" customClass="GradientOrangeView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gwP-lA-H0d" customClass="GradientOrangeView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="288" height="341"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0UO-3v-M7N">
@@ -93,10 +93,10 @@
                                                         <constraint firstAttribute="bottom" secondItem="yw4-vK-fSk" secondAttribute="bottom" id="hAL-CS-OVs"/>
                                                     </constraints>
                                                 </view>
-                                                <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="WSw-dD-Avu">
-                                                    <rect key="frame" x="107" y="272" width="74" height="18"/>
+                                                <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="WSw-dD-Avu" customClass="AccessibleCheckBoxView" customModule="Billo" customModuleProvider="target">
+                                                    <rect key="frame" x="107.5" y="272" width="73.5" height="18"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWx-VQ-EMy" customClass="CustomCheckBox" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWx-VQ-EMy" customClass="CustomCheckBox" customModule="Billo" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="0.0" width="18" height="18"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="18" id="2FH-od-95L"/>
@@ -127,12 +127,16 @@
                                                             </connections>
                                                         </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OiY-SP-uNa">
-                                                            <rect key="frame" x="32" y="0.0" width="42" height="18"/>
+                                                            <rect key="frame" x="32" y="0.0" width="41.5" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
+                                                    <connections>
+                                                        <outlet property="button" destination="OWx-VQ-EMy" id="5VL-Vn-YsL"/>
+                                                        <outlet property="label" destination="OiY-SP-uNa" id="bQ6-pk-qdS"/>
+                                                    </connections>
                                                 </stackView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.32505967881944442" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -151,7 +155,7 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cmz-ke-uAQ">
                                             <rect key="frame" x="0.0" y="336" width="288" height="144"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhD-Qc-mob" customClass="BlueButtonWithWhiteText" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhD-Qc-mob" customClass="BlueButtonWithWhiteText" customModule="Billo" customModuleProvider="target">
                                                     <rect key="frame" x="38" y="30" width="212" height="54"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="54" id="QNk-vT-zJK"/>
@@ -179,7 +183,7 @@
                                                         <action selector="onExpandButton" destination="-1" eventType="touchUpInside" id="JkA-Xq-5dh"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hNa-DH-6mO">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hNa-DH-6mO">
                                                     <rect key="frame" x="106.5" y="99" width="75" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="Kqe-UR-OHM"/>
@@ -190,7 +194,7 @@
                                                         <action selector="onDeleteFilesButton" destination="-1" eventType="touchUpInside" id="c0B-ER-idw"/>
                                                     </connections>
                                                 </button>
-                                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fz8-5k-vvp">
+                                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fz8-5k-vvp">
                                                     <rect key="frame" x="106.5" y="99" width="75" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="4XE-NG-aI3"/>
