--- a/Depo/Depo/Presentation/UserStories/Settings/Permissions/MobilePaymentPermission/View/MobilePaymentPermissionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Permissions/MobilePaymentPermission/View/MobilePaymentPermissionView.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="B1g-4V-BbR" customClass="MobilePaymentPermissionView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="B1g-4V-BbR" customClass="MobilePaymentPermissionView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -32,28 +32,32 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="mRk-YV-7K5">
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="mRk-YV-7K5" customClass="AccessibleCheckBoxView" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="50" width="334" height="22"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="82X-oH-cn1">
-                                            <rect key="frame" x="0.0" y="0.0" width="334" height="22"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="17" height="22"/>
                                             <state key="normal" image="checkbox"/>
                                             <connections>
                                                 <action selector="checkAction:" destination="B1g-4V-BbR" eventType="touchUpInside" id="hL7-yF-ScE"/>
                                             </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWk-ad-XIv">
-                                            <rect key="frame" x="334" y="0.0" width="0.0" height="22"/>
+                                            <rect key="frame" x="17" y="0.0" width="317" height="22"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <connections>
+                                        <outlet property="button" destination="82X-oH-cn1" id="PIS-Tr-v9T"/>
+                                        <outlet property="label" destination="LWk-ad-XIv" id="urb-1J-WdR"/>
+                                    </connections>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Sbn-hs-3nE">
                                     <rect key="frame" x="0.0" y="72" width="334" height="30"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMa-ig-FnC" customClass="RoundedInsetsButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMa-ig-FnC" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="334" height="30"/>
                                             <connections>
                                                 <action selector="approveAction:" destination="B1g-4V-BbR" eventType="touchUpInside" id="Egk-3F-ytD"/>
@@ -72,6 +76,7 @@
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="Xzo-bT-F9o"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="gQF-ge-P27" firstAttribute="centerX" secondItem="B1g-4V-BbR" secondAttribute="centerX" id="0n9-wg-Ppx"/>
@@ -79,7 +84,6 @@
                 <constraint firstItem="gQF-ge-P27" firstAttribute="centerY" secondItem="B1g-4V-BbR" secondAttribute="centerY" id="PfL-kJ-WK0"/>
                 <constraint firstItem="gQF-ge-P27" firstAttribute="leading" secondItem="Xzo-bT-F9o" secondAttribute="leading" constant="40" id="pXu-Aq-QMq"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Xzo-bT-F9o"/>
             <connections>
                 <outlet property="approvalFieldStackView" destination="mRk-YV-7K5" id="IIv-xh-fQT"/>
                 <outlet property="approveButton" destination="cMa-ig-FnC" id="ZLA-99-he3"/>
